[package]
name = "cgp_master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#debug = true


[dependencies]
rand = "0.8.5"
rand_core = {version = "0.6.4", features = ["getrandom"] }
rand_chacha = "0.3.1"
float_eq = "1.0.1"
#rustc-hash = "1.1.0"
petgraph = "0.6.5"
nohash-hasher = "0.2.0"
clap = { version = "4.2.5", features = ["derive"] }
itertools-num = "0.1.3"
num = "0.4.1"
dyn-clone = "1.0.17"
statrs = "0.17.1"
log = "0.4.22"

